Fix: Scroll when sidebar grows too long #207 #202

--- a/mkdocs/themes/readthedocs/css/theme.css
+++ b/mkdocs/themes/readthedocs/css/theme.css
@@ -4043,7 +4043,9 @@ pre.literal-block {
     top: 0;
     left: 0;
     width: 300px;
+    height: 100%;
     overflow: hidden;
+    overflow-y: auto;
     min-height: 100%;
     background: #343131;
     z-index: 200;
